--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </section>
 
 <section>
-<h2>Предметы которые изпользуют ИИ и облехчат Жизнь в Будущем</h2>
+<h2>Предметы которые используют ИИ и облегчат Жизнь в Будущем</h2>
 <p>Эти предметы могут значительно улучшить качество жизни, предоставляя пользователям новые возможности и поддержку в повседневных задачах.</p>
  <ol>
     <li>Эмоциональный помощник "Эмпатик"
